T-7345 theme/totara: Fixed the issue of a small gap appearing in the tabs in newer versions of firefox

--- a/theme/totara/styles_ie6.css
+++ b/theme/totara/styles_ie6.css
@@ -6,3 +6,6 @@ div#header {
 	background: #7D8312 url("images/hdr_bg_green.jpg") top right repeat-x;
 	height: 1%
 }
+.tabrow0{
+  line-height: 2.3em;
+}
