--- a/theme/totara/styles_totara.css
+++ b/theme/totara/styles_totara.css
@@ -678,7 +678,7 @@ h6 {
   top: 2.4em;
 }
 .tabrow0{
-  line-height: 2.3em;
+  line-height: 2.6em;
   text-align:left;
   padding-bottom: 2.5em;
 }
